# MatterGPT

./: pyproject.toml
MatterGPT/: tutorials_CN.sh
MatterGPT/1_train_generate/: trainer.py
